--- a/frontend-instance-EC2/nginx.conf
+++ b/frontend-instance-EC2/nginx.conf
@@ -2,12 +2,9 @@ upstream frontend_app {
     server frontend:3000;
 }
 
-upstream backend_api {
-    server 10.0.2.224:5000;
-}
-
 server {
-    listen 80;
+    listen 80 default_server;
+    server_name _;
 
     location / {
         proxy_pass http://frontend_app;
@@ -19,13 +16,11 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /api {
-        proxy_pass http://backend_api;
+    location /api/ {
+        proxy_pass http://10.0.2.224:5000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_cache_bypass $http_upgrade;
     }
 }
