--- a/frontend-instance-EC2/default.conf
+++ b/frontend-instance-EC2/default.conf
@@ -2,6 +2,12 @@ upstream frontend_app {
     server frontend:3000;
 }
 
+upstream backend_api {
+    server 10.0.2.224:5000;
+#    server 10.0.2.155:5000;
+#    server 10.0.2.240:5000;
+}
+
 server {
     listen 80 default_server;
     server_name _;
@@ -17,7 +23,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://10.0.2.224:5000;
+        proxy_pass http://backend_api;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
