--- a/frontend-instance-EC2/default.conf
+++ b/frontend-instance-EC2/default.conf
@@ -4,16 +4,16 @@ upstream frontend_app {
 
 upstream backend_api {
     server 10.0.2.224:5000;
-#    server 10.0.2.155:5000;
-#    server 10.0.2.240:5000;
+#   server 10.0.2.155:5000;
+#   server 10.0.2.240:5000;
 }
 
 server {
     listen 80 default_server;
-    server_name _;
+    servername ;
 
     location / {
-        proxy_pass http://frontend_app;
+        proxy_pass http://frontend_app/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
@@ -23,8 +23,12 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend_api;
+        # Remove the "/api" prefix before proxying
+        rewrite ^/api(/.*)$ $1 break;
+
+        proxy_pass http://backend_api/;
         proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
