Updated conf in frontend

--- a/frontend-instance-EC2/default.conf
+++ b/frontend-instance-EC2/default.conf
@@ -10,7 +10,7 @@ upstream backend_api {
 
 server {
     listen 80 default_server;
-    servername ;
+    server_name _;
 
     location / {
         proxy_pass http://frontend_app/;
