Updated default.conf in frontend

--- a/frontend-instance-EC2/default.conf
+++ b/frontend-instance-EC2/default.conf
@@ -4,8 +4,8 @@ upstream frontend_app {
 
 upstream backend_api {
     server 10.0.2.224:5000;
-#   server 10.0.2.155:5000;
-#   server 10.0.2.240:5000;
+    server 10.0.2.192:5000;
+    server 10.0.2.75:5000;
 }
 
 server {
