--- a/frontend-instance-EC2/default.conf
+++ b/frontend-instance-EC2/default.conf
@@ -7,7 +7,7 @@ upstream backend_api {
     server 10.0.2.192:5000;
     server 10.0.2.75:5000;
 }
-
+# Test trigger
 server {
     listen 80 default_server;
     server_name _;
