Updated GH Action yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,10 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
+          cd mern-gallery-sample-app
+          git fetch
+          git pull
+          cd ..
           cd ansible
           
           # Deploy backend
