--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Build and Deploy via Bastion
 on:
   push:
     branches:
-      - main          # ✅ Trigger on push to main
-  workflow_dispatch:   # ✅ Manual trigger from GitHub UI
+      - main         
+  workflow_dispatch: 
 
 jobs:
   build-and-deploy:
@@ -14,28 +14,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # ====== Docker Hub Login ======
+    # Docker Hub Login
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # ====== Build & Push Backend ======
+    # Build & Push Backend
     - name: Build backend image
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend:latest ./backend
 
     - name: Push backend image
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend:latest
 
-    # ====== Build & Push Frontend ======
+    # Build & Push Frontend
     - name: Build frontend image
       run: docker build --build-arg VITE_SERVER_HOSTNAME=$HOSTNAME -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend:latest ./frontend
 
     - name: Push frontend image
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend:latest
 
-    # ====== SSH to Bastion and Run Ansible Playbooks ======
+    # SSH to Bastion and Run Ansible Playbooks
     - name: Deploy via Ansible from Bastion
       uses: appleboy/ssh-action@v1.0.0
       with:
