--- a/frontend-instance-EC2/playbook.yaml
+++ b/frontend-instance-EC2/playbook.yaml
@@ -29,8 +29,16 @@
       ansible.builtin.shell: docker-compose -f compose.yml pull
       args:
         chdir: "{{ deploy_dir }}"
+      become: yes
 
-    - name: Build and run containers in detached mode
-      ansible.builtin.shell: docker-compose -f compose.yml up --build -d
+    - name: Stop and remove containers
+      ansible.builtin.shell: docker-compose -f compose.yml down
       args:
         chdir: "{{ deploy_dir }}"
+      become: yes
+
+    - name: Build and run containers in detached mode
+      ansible.builtin.shell: docker-compose -f compose.yml up --build -d --remove-orphans
+      args:
+        chdir: "{{ deploy_dir }}"
+      become: yes
