--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -17,12 +17,15 @@ jobs:
       HOSTNAME: ${{ secrets.HOSTNAME }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Build Docker Image
         run: |
           docker build \
             --build-arg VITE_SERVER_HOSTNAME=$HOSTNAME \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend:latest \
-            ./frontend
+            ./mern-gallery-sample-app/frontend
 
       - name: Push Docker Image
         run: |
