--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,15 +20,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Debug folder structure
-        run: ls -R
-
       - name: Build Docker Image
         run: |
           docker build \
             --build-arg VITE_SERVER_HOSTNAME=$HOSTNAME \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend:latest \
-            ./mern-gallery-sample-app/frontend
+            ./frontend
 
       - name: Push Docker Image
         run: |
