--- a/frontend-instance-EC2/playbook.yaml
+++ b/frontend-instance-EC2/playbook.yaml
@@ -40,13 +40,8 @@
       args:
         chdir: "{{ deploy_dir }}"
 
-    - name: Pull updated Docker images
-      ansible.builtin.shell: docker-compose -f compose.yml pull
-      args:
-        chdir: "{{ deploy_dir }}"
-
-    - name: Build containers without cache
-      ansible.builtin.shell: docker-compose -f compose.yml build --no-cache
+    - name: Build containers without cache and force pull
+      ansible.builtin.shell: docker-compose -f compose.yml build --no-cache --pull
       args:
         chdir: "{{ deploy_dir }}"
 
